2008-06-23 Use splines to render circles in scatter plots - MGD

===============================================================
2008-06-22 Released 0.98.1 at revision 5637

2008-06-22 Removed axes3d support and replaced it with a
           NotImplementedError for one release cycle

2008-06-21 fix marker placement bug in backend_ps - DSD

2008-06-20 [ 1978629 ] scale documentation missing/incorrect for log - MGD

2008-06-20 Added closed kwarg to PolyCollection.  Fixes bug [ 1994535
           ] still missing lines on graph with svn (r 5548). - MGD

2008-06-20 Added set/get_closed method to Polygon; fixes error
           in hist - MM

2008-06-19 Use relative font sizes (e.g. 'medium' and 'large') in
           rcsetup.py and matplotlibrc.template so that text will
           be scaled by default when changing rcParams['font.size'] -
           EF

2008-06-17 Add a generic PatchCollection class that can contain any
           kind of patch. - MGD

2008-06-13 Change pie chart label alignment to avoid having labels
           overwrite the pie - MGD

2008-06-12 Added some helper functions to the mathtext parser to
           return bitmap arrays or write pngs to make it easier to use
           mathtext outside the context of an mpl figure.  modified
           the mathpng sphinxext to use the mathtext png save
           functionality - see examples/api/mathtext_asarray.py - JDH

2008-06-11 Use matplotlib.mathtext to render math expressions in
           online docs - MGD

2008-06-11 Move PNG loading/saving to its own extension module, and
           remove duplicate code in _backend_agg.cpp and _image.cpp
           that does the same thing - MGD

2008-06-11 Numerous mathtext bugfixes, primarily related to
           dpi-independence - MGD

2008-06-10 Bar now applies the label only to the first patch only, and
           sets '_nolegend_' for the other patch labels.  This lets
           autolegend work as expected for hist and bar - see