@@ -1,3 +1,6 @@
+2006-08-24 Applied Stefan's patch to draw a sinle centered marker over
+           a line with numpoints==1 - JDH
+
 2008-06-23 Use splines to render circles in scatter plots - MGD
 
 ===============================================================
